--- a/src/app/user-get/user-get.component.html
+++ b/src/app/user-get/user-get.component.html
@@ -8,7 +8,7 @@
       <td>Email</td>
       <td>Direccion</td>
       <td>Telefono</td>      
-     <!-- <td colspan="2">Actions</td>-->
+   <td colspan="2">Actions</td>
   </tr>
   </thead>
 
@@ -20,7 +20,7 @@
           <td>{{ user.email }}</td>
           <td>{{ user.address }}</td>
           <td>{{ user.code_contry }} {{  user.phone }}</td>
-         <!-- <td><a [routerLink]="['edit', user._id]" class="btn btn-primary">Edit</a></td>-->
+          <td><a [routerLink]="['edit', user._id]" class="btn btn-primary">Edit</a></td>
          <!-- <td><a (click) = "deleteUser(user._id)" class="btn btn-danger">Delete</a></td>-->
       </tr>
   </tbody>
