--- a/src/app/user-get/user-get.component.html
+++ b/src/app/user-get/user-get.component.html
@@ -1,3 +1,10 @@
+<div class="alert alert-success" *ngIf="!staticAlertWinnClosed">
+    <strong>Eliminado!</strong> 
+  </div>
+
+  <div class="alert alert-danger" *ngIf="!staticAlertLoserClosed">
+    <strong>Error!</strong> 
+  </div>
 <table class="table table-hover">
   <thead>
   <tr>
@@ -21,7 +28,7 @@
           <td>{{ user.address }}</td>
           <td>{{ user.code_contry }} {{  user.phone }}</td>
           <td><a [routerLink]="['edit', user._id]" class="btn btn-primary">Edit</a></td>
-         <!-- <td><a (click) = "deleteUser(user._id)" class="btn btn-danger">Delete</a></td>-->
+       <td><a (click) = "DeletUser(user._id)" class="btn btn-danger">Delete</a></td>
       </tr>
   </tbody>
 </table>
