--- a/src/app/user-add/user-add.component.html
+++ b/src/app/user-add/user-add.component.html
@@ -1,6 +1,7 @@
 
 
 <div class="card">
+<label ><h1>Crear Usuario</h1></label>
   <div class="card-body">
     <form [formGroup]="angForm" novalidate>
 
