--- a/src/app/user-edit/user-edit.component.html
+++ b/src/app/user-edit/user-edit.component.html
@@ -1,5 +1,6 @@
 
 <div class="card">
+<label ><h1>Editar Usuario</h1></label>
   <div class="card-body">
     <form [formGroup]="angForm" novalidate>
 
