--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,5 @@
 <div class="card">
+<label ><h1>Administrar Palabra Ahorcado</h1></label>
   <div class="card-body">
     <form [formGroup]="angForm" novalidate>
 
