--- a/src/app/ahorcado/ahorcado.component.html
+++ b/src/app/ahorcado/ahorcado.component.html
@@ -1,3 +1,4 @@
+<label ><h1>NO mueras ahorcado!!!!</h1></label>
 <div class="alert alert-success" *ngIf="!staticAlertWinnClosed">
     <strong>Salvado!</strong> 
   </div>
