--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<ng2-slim-loading-bar color="blue"></ng2-slim-loading-bar>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">TJAC</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<nav class="navbar navbar-expand-sm bg-light">
-  <div class="container-fluid">
-    <ul class="navbar-nav">
-      <li class="nav-item">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+     
+
+ <li class="nav-item">
         <a routerLink="ahorcado/create" class="nav-link" routerLinkActive="active">
           Crear Usuario
         </a>
@@ -24,9 +28,13 @@
           Admin Ahorcado
         </a>
       </li> 
+
     </ul>
+    
   </div>
 </nav>
+
+
 
 <div class="container">
   <router-outlet></router-outlet>
